--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/platform-browser": "^14.2.7",
         "@angular/platform-browser-dynamic": "^14.2.7",
         "@angular/router": "^14.2.7",
+        "@angular/service-worker": "^14.2.7",
         "rxjs": "~7.4.0",
         "tslib": "^2.3.1",
         "zone.js": "~0.11.4"
