--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
+        "start:ssl": "ng serve --ssl",
         "fix": "prettier -w ./",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
