--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "fix": "prettier -w ./",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
-        "test": "ng test"
+        "test": "jest"
     },
     "private": true,
     "dependencies": {
@@ -32,7 +32,13 @@
         "@types/jasmine": "~3.8.0",
         "@types/node": "^12.11.1",
         "jasmine-core": "~3.8.0",
+        "jest": "^28.1.3",
+        "jest-environment-jsdom": "^29.0.3",
+        "jest-jasmine2": "^29.0.3",
+        "jest-preset-angular": "^12.2.2",
+        "ng-mocks": "^14.3.2",
         "prettier": "^2.4.1",
+        "ts-jest": "^28.0.8",
         "typescript": "~4.8.4"
     }
 }
