--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
-    "name": "game-of-life",
-    "version": "1.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "start:ssl": "ng serve --ssl",
-        "fix": "prettier -w ./",
-        "build": "ng build",
-        "watch": "ng build --watch --configuration development",
-        "test": "jest"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^14.2.7",
-        "@angular/common": "^14.2.7",
-        "@angular/compiler": "^14.2.7",
-        "@angular/core": "^14.2.7",
-        "@angular/forms": "^14.2.7",
-        "@angular/platform-browser": "^14.2.7",
-        "@angular/platform-browser-dynamic": "^14.2.7",
-        "@angular/router": "^14.2.7",
-        "@angular/service-worker": "^14.2.7",
-        "rxjs": "~7.4.0",
-        "tslib": "^2.3.1",
-        "zone.js": "~0.11.4"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^14.2.6",
-        "@angular/cli": "^14.2.6",
-        "@angular/compiler-cli": "^14.2.7",
-        "@types/jasmine": "~3.8.0",
-        "@types/node": "^12.11.1",
-        "jasmine-core": "~3.8.0",
-        "jest": "^28.1.3",
-        "jest-environment-jsdom": "^29.0.3",
-        "jest-jasmine2": "^29.0.3",
-        "jest-preset-angular": "^12.2.2",
-        "ng-mocks": "^14.3.2",
-        "prettier": "^2.4.1",
-        "ts-jest": "^28.0.8",
-        "typescript": "~4.8.4"
-    }
+  "name": "game-of-life",
+  "version": "1.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "start:ssl": "ng serve --ssl",
+    "fix": "prettier -w ./",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "jest"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^14.2.7",
+    "@angular/cdk": "^14.2.6",
+    "@angular/common": "^14.2.7",
+    "@angular/compiler": "^14.2.7",
+    "@angular/core": "^14.2.7",
+    "@angular/forms": "^14.2.7",
+    "@angular/material": "^14.2.6",
+    "@angular/platform-browser": "^14.2.7",
+    "@angular/platform-browser-dynamic": "^14.2.7",
+    "@angular/router": "^14.2.7",
+    "@angular/service-worker": "^14.2.7",
+    "rxjs": "~7.4.0",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^14.2.6",
+    "@angular/cli": "^14.2.6",
+    "@angular/compiler-cli": "^14.2.7",
+    "@types/jasmine": "~3.8.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~3.8.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^29.0.3",
+    "jest-jasmine2": "^29.0.3",
+    "jest-preset-angular": "^12.2.2",
+    "ng-mocks": "^14.3.2",
+    "prettier": "^2.4.1",
+    "ts-jest": "^28.0.8",
+    "typescript": "~4.8.4"
+  }
 }
