--- a/angular.json
+++ b/angular.json
@@ -27,10 +27,7 @@
                             "src/assets",
                             "src/manifest.webmanifest"
                         ],
-                        "styles": [
-                          "src/custom-theme.scss",
-                          "src/styles.css"
-                        ],
+                        "styles": ["src/custom-theme.scss", "src/styles.css"],
                         "scripts": [],
                         "serviceWorker": true,
                         "ngswConfigPath": "ngsw-config.json"
