--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
                             "src/assets",
                             "src/manifest.webmanifest"
                         ],
-                        "styles": ["src/custom-theme.scss", "src/styles.css"],
+                        "styles": ["src/styles.css"],
                         "scripts": [],
                         "serviceWorker": true,
                         "ngswConfigPath": "ngsw-config.json"
