--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
         "ng-mocks": "^14.5.2",
         "prettier": "^2.8.1",
         "ts-jest": "^28.0.8",
-        "typescript": "~4.8.2"
+        "typescript": "^4.8.4"
     }
 }
