--- a/package.json
+++ b/package.json
@@ -12,36 +12,36 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^15.0.4",
-        "@angular/cdk": "^15.0.4",
-        "@angular/common": "^15.0.4",
-        "@angular/compiler": "^15.0.4",
-        "@angular/core": "^15.0.4",
-        "@angular/forms": "^15.0.4",
-        "@angular/material": "^15.0.4",
-        "@angular/platform-browser": "^15.0.4",
-        "@angular/platform-browser-dynamic": "^15.0.4",
-        "@angular/router": "^15.0.4",
-        "@angular/service-worker": "^15.0.4",
+        "@angular/animations": "^16.2.6",
+        "@angular/cdk": "^16.2.5",
+        "@angular/common": "^16.2.6",
+        "@angular/compiler": "^16.2.6",
+        "@angular/core": "^16.2.6",
+        "@angular/forms": "^16.2.6",
+        "@angular/material": "^16.2.5",
+        "@angular/platform-browser": "^16.2.6",
+        "@angular/platform-browser-dynamic": "^16.2.6",
+        "@angular/router": "^16.2.6",
+        "@angular/service-worker": "^16.2.6",
         "material-design-icons-iconfont": "^6.7.0",
-        "rxjs": "~7.8.0",
+        "rxjs": "^7.8.1",
         "tslib": "^2.4.1",
-        "zone.js": "~0.12.0"
+        "zone.js": "~0.13.0"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^15.0.4",
-        "@angular/cli": "^15.0.4",
-        "@angular/compiler-cli": "^15.0.4",
+        "@angular-devkit/build-angular": "^16.2.3",
+        "@angular/cli": "^16.2.3",
+        "@angular/compiler-cli": "^16.2.6",
         "@types/jasmine": "~4.3.1",
         "@types/node": "^18.11.18",
         "jasmine-core": "~4.5.0",
-        "jest": "^28.1.3",
-        "jest-environment-jsdom": "^29.3.1",
-        "jest-jasmine2": "^29.3.1",
-        "jest-preset-angular": "^12.2.3",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-jasmine2": "^29.7.0",
+        "jest-preset-angular": "^13.1.2",
         "ng-mocks": "^14.5.2",
         "prettier": "^2.8.1",
-        "ts-jest": "^28.0.8",
+        "ts-jest": "^29.1.1",
         "typescript": "^4.8.4"
     }
 }
