feat: update jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "downlevelIteration": true,
         "experimentalDecorators": true,
         "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
         "importHelpers": true,
         "target": "ES2022",
         "module": "es2020",
