--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
         "jasmine-core": "~4.5.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "jest-fail-on-console": "^3.1.1",
         "jest-jasmine2": "^29.7.0",
         "jest-preset-angular": "^13.1.2",
-        "ng-mocks": "^14.5.2",
+        "ng-mocks": "^14.11.0",
         "prettier": "^2.8.1",
         "ts-jest": "^29.1.1",
         "typescript": "^4.8.4"
